Thu Jun 30 14:13:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/data.c src/tds/iconv.c src/tds/mem.c src/tds/query.c:
	* src/tds/read.c src/tds/token.c src/tds/write.c:
	- doc updates

Thu Jun 30 12:58:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/checkexport.sh src/odbc/odbc.c:
	- add SQLParamOptions to implemented ODBC functions

Thu Jun 30 11:46:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ctutil.c:
	* src/dblib/dbutil.c src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- rename some TDSMESSAGE fields as James suggested

Wed Jun 29 09:18:06 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/freebcp.c src/ctlib/cs.c:
	* src/ctlib/ct.c src/ctlib/unittests/t0002.c:
	* src/ctlib/unittests/t0006.c src/dblib/bcp.c:
	* src/dblib/dblib.c src/dblib/dbutil.c src/dblib/unittests/t0013.c:
	* src/dblib/unittests/t0014.c src/odbc/convert_sql2string.c:
	* src/odbc/convert_tds2sql.c src/odbc/error.c:
	* src/odbc/native.c src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/testodbc.c src/odbc/unittests/type.c:
	* src/tds/config.c src/tds/convert.c src/tds/iconv.c:
	* src/tds/mem.c src/tds/net.c src/tds/query.c src/tds/read.c:
	* src/tds/tdsstring.c src/tds/token.c src/tds/write.c:
	* src/tds/unittests/t0007.c:
	- update comments

Tue Jun 28 21:07:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds.net:
	- make tds_goodread/tds_goodwrite static again

Tue Jun 28 10:26:49 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: remove warning

Mon Jun 27 18:23:50 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/dblib_errors.txt include/sybdb.h src/dblib/dblib.c
	- created error message structure

Mon Jun 27 15:54:39 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in src/dblib/unittests/Makefile.am